fix:larger menu, narrower main window in non mobile view, added slight glow to stream objects, toast when displayinh stream object at the top, hide stream object when no nodes found

--- a/Frontend/src/app/modules/stream/stream.component.scss
+++ b/Frontend/src/app/modules/stream/stream.component.scss
@@ -34,6 +34,7 @@
     cursor: pointer;
 }
 
+
 .arrow-menu-arrow {
     font-size: 1.5rem;
     color: gray;
@@ -47,8 +48,8 @@
     background-color: white;
     border-color: #eee;
     border-style: solid;
-    border-width: 1px
-
+    border-width: 1px;
+    z-index: 1;
 }
 
 .choose-menu{
@@ -82,6 +83,8 @@
 .stream-box{
     background-color: white;
     margin-top: 15px;
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
+    border-radius: 2px;
 }
 
 .stream-title-date{
